# precis

./: .gitignore  CLAUDE.md  Cargo.toml  PERF.md  README.md  brief.md  dist-workspace.toml  dist.toml  issues.md  prompt.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: setup-worktree.sh
.claude/mats/: best-practices-rejected.md
.coven/: config.toml  land.sh  system.md
.coven/agents/: dispatch.md  main.md
.github/workflows/: release.yml
benches/: hot_path.rs
plugins/precis/.claude-plugin/: plugin.json
plugins/precis/hooks/: auto-approve-precis.sh  hooks.json  session-start.sh
plugins/precis/scripts/: ensure-jq.sh  ensure-precis.sh
queries/: c.scm  go.scm  json.scm  lua.scm  markdown.scm  python.scm  rust.scm  toml.scm  typescript.scm  yaml.scm
src/: fixtures.rs  format.rs  layout.rs  lib.rs  main.rs  parse.rs  schedule.rs  walk.rs
test/: fixtures.rs  perf_fixtures.rs
test/snapshots/: snapshots__anyhow.snap  snapshots__bareiron.snap  snapshots__chronos.snap  snapshots__cmdk.snap  snapshots__cmdk_cmdk_src.snap  snapshots__commander.snap  snapshots__d2ts.snap  snapshots__d2ts_d2ts.snap  snapshots__enclosed.snap  snapshots__enclosed_crypto.snap  snapshots__enclosed_lib.snap  snapshots__go_multierror.snap  snapshots__htmy.snap  snapshots__htmy_renderer.snap  snapshots__krep.snap  snapshots__ky.snap  snapshots__ky_source_errors.snap  snapshots__log.snap  snapshots__log_src_kv.snap  snapshots__mcphost.snap  snapshots__mcphost_sdk.snap  snapshots__mdbook.snap  snapshots__mdbook_guide_src.snap  snapshots__microbootstrap.snap  snapshots__microbootstrap_instruments.snap  snapshots__mitt.snap  snapshots__nano_vllm.snap  snapshots__nano_vllm_engine.snap  snapshots__neco.snap  snapshots__otree.snap  snapshots__peepdb.snap  snapshots__peepdb_db.snap  snapshots__pluggy.snap  snapshots__py3xui.snap  snapshots__py3xui_api.snap  snapshots__sds.snap  snapshots__semver.snap  snapshots__semver_classes.snap  snapshots__semver_internal.snap  snapshots__soluna.snap  (+24 more)
tests/: snapshots.rs
tests/snapshots/: snapshots__budget_anyhow_1000.snap  snapshots__budget_anyhow_2000.snap  snapshots__budget_anyhow_4000.snap  snapshots__budget_anyhow_500.snap  snapshots__budget_anyhow_level0.snap  snapshots__budget_anyhow_level1.snap  snapshots__budget_anyhow_level3.snap  snapshots__budget_anyhow_level4.snap  snapshots__budget_anyhow_root_level0.snap  snapshots__budget_anyhow_root_level1.snap  snapshots__budget_anyhow_root_level3.snap  snapshots__budget_anyhow_root_level4.snap  snapshots__budget_anyhow_src_1000.snap  snapshots__budget_anyhow_src_2000.snap  snapshots__budget_anyhow_src_4000.snap  snapshots__budget_anyhow_src_500.snap  snapshots__budget_cmdk_1000.snap  snapshots__budget_cmdk_2000.snap  snapshots__budget_cmdk_4000.snap  snapshots__budget_cmdk_500.snap  snapshots__budget_cmdk_cmdk_src_1000.snap  snapshots__budget_cmdk_cmdk_src_2000.snap  snapshots__budget_cmdk_cmdk_src_4000.snap  snapshots__budget_cmdk_cmdk_src_500.snap  snapshots__budget_cmdk_level0.snap  snapshots__budget_cmdk_level1.snap  snapshots__budget_cmdk_level4.snap  snapshots__budget_cmdk_level6.snap  snapshots__budget_cmdk_root_level0.snap  snapshots__budget_cmdk_root_level1.snap  snapshots__budget_cmdk_root_level2.snap  snapshots__budget_cmdk_root_level6.snap  snapshots__budget_color_1000.snap  snapshots__budget_color_2000.snap  snapshots__budget_color_4000.snap  snapshots__budget_color_500.snap  snapshots__budget_color_level0.snap  snapshots__budget_color_level1.snap  snapshots__budget_color_level3.snap  snapshots__budget_color_level4.snap  (+764 more)
