[package]
name = "precis"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that extracts a token-efficient summary of a codebase"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde_json = "1"
streaming-iterator = "0.1.9"
tree-sitter = { version = "0.25", features = ["std"] }
tree-sitter-go = "0.25.0"
tree-sitter-md = "0.5.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
insta = "1"
tempfile = "3"

# Tree-sitter parsing is ~4x slower without optimizations, which dominates test runtime.
[profile.dev.package.tree-sitter]
opt-level = 3
[profile.dev.package.tree-sitter-rust]
opt-level = 3
[profile.dev.package.tree-sitter-python]
opt-level = 3
[profile.dev.package.tree-sitter-typescript]
opt-level = 3
[profile.dev.package.tree-sitter-go]
opt-level = 3
[profile.dev.package.tree-sitter-md]
opt-level = 3
