[package]
name = "precis"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that extracts a token-efficient summary of a codebase"
license = "MIT"
default-run = "precis"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde_json = "1"
streaming-iterator = "0.1.9"
tiktoken-rs = "0.9.1"
tree-sitter = { version = "0.25", features = ["std"] }
tree-sitter-c = "0.24.1"
tree-sitter-go = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-md = "0.5.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
tempfile = "3"

[[bench]]
name = "hot_path"
harness = false

# Tree-sitter parsing is ~4x slower without optimizations, which dominates test runtime.
[profile.dev.package.tree-sitter]
opt-level = 3
[profile.dev.package.tree-sitter-rust]
opt-level = 3
[profile.dev.package.tree-sitter-python]
opt-level = 3
[profile.dev.package.tree-sitter-typescript]
opt-level = 3
[profile.dev.package.tree-sitter-c]
opt-level = 3
[profile.dev.package.tree-sitter-go]
opt-level = 3
[profile.dev.package.tree-sitter-md]
opt-level = 3
[profile.dev.package.tree-sitter-json]
opt-level = 3
[profile.dev.package.tree-sitter-toml-ng]
opt-level = 3
[profile.dev.package.tree-sitter-yaml]
opt-level = 3
